--- a/index copy.html
+++ b/index copy.html
@@ -115,7 +115,12 @@
                     </div>
                     <div class="img has-text-centered">
                         <!-- Your image here -->
-                        <img src="static/images/DFs.png" alt="the image of lps" />
+                        <div style="text-align: center; width: 500px; border: green solid 1px;">
+                            <img alt="" src="static/images/DFs.png" style="margin: 0 auto;" />
+                            </div>
+
+
+
                         <h2 class="subtitle has-text-justified">
                             A simulated mixture sample with target speech sources located at 0° and 180°, respectively.
                             (a) The geometry of three types of microphone arrays including 4 mic linear array (LA), 6
