--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                                             noisy: `N${(i + 1).toString().padStart(2, '0')}`,
                                             clean: `S${(i + 1).toString().padStart(2, '0')}`,
                                         };
+                                        // var aaa=0
 
                                         // 将对象添加到数组中
                                         data.push(obj);
