--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
                                 <tr style="border-top:2px solid black" align="center">
                                     <td>
-                                        <center>Game commentary scene #${row.id}</center>
+                                        <center>Game commentary </br> scene #${row.id}</center>
                                     </td>
                                     <td>
                                         <img src="static/images/TFGAN/game_16k/game16k_${row.noisy}.jpg" alt="the image of lps" />
