--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <div class="container is-max-desktop">
                 <div class="columns is-centered">
                     <div class="column has-text-centered">
-                        <h1 class="title is-1 publication-title">A Unified Metric-GAN Based Speech Enhancement Framework For TTS</h1>
+                        <h1 class="title is-1 publication-title">
+                            Virtual human plan (allowing NPCs to talk)- personalized speech synthesis data enhancement
+                            </h1>
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">Cong Pang</span>
                         </div>
